<resources>
    <string name="app_name">Cats App</string>
    <string name="cat_breeds">Cat Breeds</string>
    <string name="home">Home (Breeds)</string>
    <string name="favorites">My Favorite Breeds</string>
    <string name="categories">Cat Categories</string>
    <string name="cat_image_descr">Cat Image</string>
    <string name="btn_retry_text">RETRY</string>
    <string name="error_message">Please check your internet connection</string>
    <string name="api_error_message">An error occurred. Please try again.</string>
    <string name="breed_image">Breed Image</string>
    <string name="category_image">Category Image</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="no_data">You don\'t have any favorites yet…</string>

    <string name="title_activity_breed_details">BreedDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="affection_level">Affection Level</string>
    <string name="adaptability">Adaptability</string>
    <string name="child_friendly">Child Friendly</string>
    <string name="dog_friendly">Dog Friendly</string>
    <string name="energy_level">Energy Level</string>
    <string name="grooming">Grooming</string>
    <string name="health_issues">Health Issues</string>
    <string name="intelligence">Intelligence</string>
    <string name="shedding_level">Shedding Level</string>
    <string name="social_needs">Social Needs</string>
    <string name="stranger_friendly">Stranger Friendly</string>
    <string name="hypoallergenic">Hypoallergenic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="mark_favorite">Mark as favorite</string>
    <string name="marked_favorite">marked as favorite</string>
    <string name="remove_favorite">Remove from favorites</string>
    <string name="removed_favorite">removed from favorites</string>

    <string name="action">Action</string>

    <string name="country_code_image_url">https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.2.1/flags/1x1/</string>
</resources>
