<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.katsapp.BreedDetailsActivity"
    tools:showIn="@layout/activity_breed_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lly_data_handling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_8dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_origin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                app:cardCornerRadius="15dp"
                android:backgroundTint="@android:color/darker_gray">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/country_code_image"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/breed_image" />

                    <TextView
                        android:id="@+id/origin"
                        android:layout_toEndOf="@+id/country_code_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_8dp"
                        android:layout_gravity="center"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_hypoallergenic"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                app:cardCornerRadius="15dp"
                android:elevation="@dimen/_3dp"
                android:backgroundTint="@android:color/darker_gray">

                <TextView
                    android:id="@+id/hypoallergenic"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_8dp"
                    android:layout_gravity="center"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lly2_data_handling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"/>

            <TextView
                android:id="@+id/temperament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">

                <TextView
                    android:id="@+id/affection_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/affection_level"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/affection"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/adaptability_label"
                    android:text="@string/adaptability"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/adaptability"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/child_friendly_label"
                    android:text="@string/child_friendly"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/child_friendly"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/dog_friendly_label"
                    android:text="@string/dog_friendly"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/dog_friendly"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/energy_level_label"
                    android:text="@string/energy_level"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/energy_level"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/grooming_label"
                    android:text="@string/grooming"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/grooming"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/health_issues_label"
                    android:text="@string/health_issues"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/health_issues"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/intelligence_label"
                    android:text="@string/intelligence"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/intelligence"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/shedding_level_label"
                    android:text="@string/shedding_level"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/shedding_level"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/social_needs_label"
                    android:text="@string/social_needs"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/social_needs"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <TextView
                    android:id="@+id/stranger_friendly_label"
                    android:text="@string/stranger_friendly"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

                <RatingBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/stranger_friendly"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"/>

            </GridLayout>

            <TextView
                android:id="@+id/wikipedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lly_error_handling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_retry_text"
                android:visibility="gone"
                android:theme="@style/ButtonColored"/>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:layout_marginTop="@dimen/height_100dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:layout_marginTop="@dimen/height_100dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>